--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-multi-carousel": "^2.8.0",
     "reactstrap": "^9.0.3",
     "rxjs": "^7.5.5",
