--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-js-pagination": "^3.0.3",
+    "react-markdown": "^8.0.3",
     "react-multi-carousel": "^2.8.0",
     "reactstrap": "^9.0.3",
     "rxjs": "^7.5.5",
