--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,7 @@
-process.env.NEXT_PUBLIC_AWS_BUCKET=
+NEXT_PUBLIC_URL_ORIGIN=
+NEXT_PUBLIC_API_URL=
+
+NEXT_PUBLIC_SOCIAL_WHATSAPP=
+NEXT_PUBLIC_SOCIAL_INSTAGRAM=
+
+NEXT_PUBLIC_AWS_BUCKET=
